--- a/Parse-Starter-Project-1.9.3/ParseStarterProject/res/layout/fragment_loginsignup.xml
+++ b/Parse-Starter-Project-1.9.3/ParseStarterProject/res/layout/fragment_loginsignup.xml
@@ -28,7 +28,8 @@
             <EditText
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
-                android:id="@+id/password"/>
+                android:id="@+id/password"
+                android:password="true"/>
         </TableRow>
 
         <Button
