changed textviews to edit text on detail view
changed textviews to edit text on detail view, update works on server
end but does not update list, delete works but also does not update
list. added isOnline method to check if app is online

--- a/Parse-Starter-Project-1.9.3/ParseStarterProject/res/layout/fragment_detail.xml
+++ b/Parse-Starter-Project-1.9.3/ParseStarterProject/res/layout/fragment_detail.xml
@@ -48,10 +48,16 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:textAppearance="?android:textAppearanceMedium"
+                android:inputType="number"
                 android:id="@+id/detailYear"/>
 
         </TableRow>
 
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Update"
+            android:id="@+id/updateBtn"/>
 
         <Button
             android:layout_height="wrap_content"
