mistakenly deleted files for detail view controller
mistakenly deleted files for detail view controller, added new files

--- a/parse-starter-project-1.7.5/ParseStarterProject/Main.storyboard
+++ b/parse-starter-project-1.7.5/ParseStarterProject/Main.storyboard
@@ -41,7 +41,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="oW6-Og-DX9" kind="show" identifier="detailsSegue" id="QtV-uB-YGv"/>
+                                            <segue destination="oW6-Og-DX9" kind="show" identifier="detailsSegue" id="gC0-iF-9cT"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -104,10 +104,10 @@
             </objects>
             <point key="canvasLocation" x="1070" y="402"/>
         </scene>
-        <!--Details View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="cH7-Zg-itb">
             <objects>
-                <viewController id="oW6-Og-DX9" customClass="DetailsViewController" sceneMemberID="viewController">
+                <viewController id="oW6-Og-DX9" customClass="DetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="CaP-8m-HKL"/>
                         <viewControllerLayoutGuide type="bottom" id="j2J-CY-24H"/>
@@ -132,12 +132,17 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
+                                    <action selector="Save:" destination="oW6-Og-DX9" eventType="touchUpInside" id="MyU-KQ-p7n"/>
                                     <action selector="SaveButton:" destination="BpS-3U-ZbI" eventType="touchUpInside" id="dCc-6F-el3"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="detailHeroId" destination="Gah-Z9-9SL" id="Jr9-5Z-zcN"/>
+                        <outlet property="detailHeroName" destination="lAk-in-n0q" id="bnF-uj-ofb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4a8-6j-Xmr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -156,7 +161,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Hero Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h0h-rU-H82">
-                                <rect key="frame" x="10" y="92" width="300" height="30"/>
+                                <rect key="frame" x="10" y="100" width="300" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
